--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -212,7 +212,6 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="dsound\dsound_hook.cpp" />
     <ClCompile Include="DxWnd\v2_03_60_src\proxy\init.cpp" />
-    <ClCompile Include="dxwrapper.cpp" />
     <ClCompile Include="fullscreen.cpp" />
     <ClCompile Include="hook\hotpatch.cpp" />
     <ClCompile Include="hook\iatpatch.cpp" />
@@ -225,6 +224,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
     <ClCompile Include="wrappers\dxgi.cpp" />
     <ClCompile Include="wrappers\winmm.cpp" />
     <ClCompile Include="wrappers\winspool.cpp" />
+    <ClCompile Include="wrappers\wrapper.cpp" />
     <ClCompile Include="writememory\writememory.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -236,10 +236,26 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
     <ClInclude Include="d3d8to9\d3d8to9.hpp" />
     <ClInclude Include="d3d8to9\d3d8types.hpp" />
     <ClInclude Include="DDrawCompat\v0.2.1\DDrawLog.h" />
-    <ClInclude Include="dgame.h" />
+    <ClInclude Include="cfg.h" />
+    <ClInclude Include="disasm\initdisasm.h" />
+    <ClInclude Include="dllmain.h" />
+    <ClInclude Include="dsound\dsound_hook.h" />
     <ClInclude Include="dxwrapper.h" />
+    <ClInclude Include="fullscreen.h" />
+    <ClInclude Include="hook\hotpatch.h" />
+    <ClInclude Include="hook\iatpatch.h" />
     <ClInclude Include="hook\MinHook.h" />
-    <ClInclude Include="resource.h" />
+    <ClInclude Include="utils.h" />
+    <ClInclude Include="wrappers\d3d8.h" />
+    <ClInclude Include="wrappers\d3d9.h" />
+    <ClInclude Include="wrappers\ddraw.h" />
+    <ClInclude Include="wrappers\dplayx.h" />
+    <ClInclude Include="wrappers\dsound.h" />
+    <ClInclude Include="wrappers\dxgi.h" />
+    <ClInclude Include="wrappers\winmm.h" />
+    <ClInclude Include="wrappers\winspool.h" />
+    <ClInclude Include="wrappers\wrapper.h" />
+    <ClInclude Include="writememory\writememory.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="dxwrapper.rc">
