Added DSoundCtrl functions
Added DirectSoundControl project for improved sound control

--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -212,6 +212,12 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
     <ClCompile Include="disasm\Disasm.c" />
     <ClCompile Include="disasm\initdisasm.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="DSoundCtrl\DSoundCtrl.cpp" />
+    <ClCompile Include="DSoundCtrl\IDirectSound3DBufferEx.cpp" />
+    <ClCompile Include="DSoundCtrl\IDirectSound3DListenerEx.cpp" />
+    <ClCompile Include="DSoundCtrl\IDirectSoundBufferEx.cpp" />
+    <ClCompile Include="DSoundCtrl\IDirectSoundClassFactoryEx.cpp" />
+    <ClCompile Include="DSoundCtrl\IDirectSoundEx.cpp" />
     <ClCompile Include="DxWnd\v2_03_60_src\proxy\init.cpp" />
     <ClCompile Include="fullscreen.cpp" />
     <ClCompile Include="hook\hotpatch.cpp" />
@@ -241,6 +247,15 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
     <ClInclude Include="cfg.h" />
     <ClInclude Include="disasm\initdisasm.h" />
     <ClInclude Include="dllmain.h" />
+    <ClInclude Include="DSoundCtrl\dsound.h" />
+    <ClInclude Include="DSoundCtrl\DSoundCtrl.h" />
+    <ClInclude Include="DSoundCtrl\DSoundCtrlExtl.h" />
+    <ClInclude Include="DSoundCtrl\DSoundTypes.h" />
+    <ClInclude Include="DSoundCtrl\IDirectSound3DBufferEx.h" />
+    <ClInclude Include="DSoundCtrl\IDirectSound3DListenerEx.h" />
+    <ClInclude Include="DSoundCtrl\IDirectSoundBufferEx.h" />
+    <ClInclude Include="DSoundCtrl\IDirectSoundClassFactoryEx.h" />
+    <ClInclude Include="DSoundCtrl\IDirectSoundEx.h" />
     <ClInclude Include="dxwrapper.h" />
     <ClInclude Include="fullscreen.h" />
     <ClInclude Include="hook\hotpatch.h" />
