--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Build results
-[Bb]in/
-[Oo]bj/
-[Bb]uild/
-[Dd]ebug/
-[Rr]elease/
+[Bb]in/*
+[Oo]bj/*
+[Bb]uild/*
+[Dd]ebug/*
+[Rr]elease/*
 
 # Compiled Object files
 *.slo
@@ -37,7 +37,7 @@
 *.exe
 
 # Other Visual Studio files
-ipch/
+ipch/*
 *.user
 *.suo
 *.aps
